--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,115 @@
 a {
     text-decoration: none;
 }
+
+::selection {
+    color: #fff;
+    background: transparent;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    background-color: red;
+}
+
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+}
+
+.container {
+    position: relative;
+    z-index: 1;
+    pointer-events: none;
+    width: 100%;
+    height: 100%;
+}
+
+.site-content {
+    position: absolute;
+}
+
+.nav,
+.footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 2em;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+}
+
+.links {
+    display: flex;
+    gap: 2em;
+}
+
+a {
+    color: #fff;
+    pointer-events: auto;
+}
+
+.logo a {
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+}
+
+.hero-copy {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+}
+
+.hero-copy h1 {
+    font-size: 8vw;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.hero-copy p {
+    font-size: 2vw;
+    color: #fff;
+    margin: 0.5em 0;
+}
+
+#heroVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
